--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   --section-padding-top: 94px;
   --title-text-color: #212121;
   --text-color: #757575;
-  --background-hero-color: #2f303a;
+  --background-hero-color: #c4c4c4;
   --hero-tytle-color: #ffffff;
   --hero-btn-texr-color: #ffffff;
   --hero-btn-background-color: #2196f3;
@@ -161,11 +161,20 @@ body {
 /*---------------MAIN----------------------
 /* ---------------hero------------------------ */
 .hero {
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
 
   background-color: var(--background-hero-color);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/студия/hero\ bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .hero-title {
   margin-left: auto;
@@ -276,6 +285,9 @@ body {
 }
 
 .team-item {
+  background-color: var(--background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -294,6 +306,7 @@ body {
 }
 .team-position {
   margin-top: 10px;
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: calc(19 / 16);
   letter-spacing: 0.03em;
@@ -305,6 +318,72 @@ body {
 .team-content {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+.team-socials-list {
+  display: flex;
+  justify-content: center;
+}
+.team-socials-item + .team-socials-item {
+  margin-left: 10px;
+}
+
+.team-socials-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #afb1b8;
+}
+
+.team-socials-link:hover,
+.team-socials-link:focus {
+  background-color: var(--accent-color);
+  color: var(--additional-font-color);
+}
+.team-socials-icon {
+  fill: currentColor;
+}
+/*------------------Постоянные клиенты--------------*/
+.customers-title {
+  margin-bottom: 50px;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: calc(42 / 36);
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-text-color);
+}
+
+.customers-list {
+  display: flex;
+}
+.customers-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.customers-link {
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #afb1b8;
+}
+
+.customers-link:hover,
+.customers-link:focus {
+  color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+.customers-icon {
+  fill: currentColor;
 }
 
 /*------------------ buttons----------------- */
@@ -339,7 +418,10 @@ body {
 .filter-button:focus {
   color: var(--additional-font-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
 /* ---------------примеры работ  projects------------- */
 .projects {
   display: flex;
@@ -350,7 +432,11 @@ body {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-
+.project-item:hover,
+.project-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .project-item:nth-child(3n) {
   margin-right: 0;
 }
