--- a/css/styles.css
+++ b/css/styles.css
@@ -142,12 +142,20 @@ body {
 }
 
 .nav-auth-link {
+  display: flex;
+  align-items: center;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 
   color: var(--text-color);
+}
+
+.nav-icon {
+  margin-right: 10px;
+  fill: currentColor;
 }
 
 .header-contacts-mail {
@@ -219,7 +227,18 @@ body {
   margin-right: var(--card-set-gap);
 }
 
+.features-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 120px;
+  background: #f5f4fa;
+  border-radius: 4px;
+}
+
 .features-title {
+  margin-top: 30px;
   margin-bottom: 10px;
 
   font-weight: 700;
@@ -323,13 +342,17 @@ body {
   display: flex;
   justify-content: center;
 }
+.team-socials-item {
+  width: 44px;
+  height: 44px;
+}
 .team-socials-item + .team-socials-item {
   margin-left: 10px;
 }
 
 .team-socials-link {
-  width: 44px;
-  height: 44px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -432,8 +455,13 @@ body {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.project-item:hover,
-.project-item:focus {
+.project-item-link {
+  display: block;
+  text-decoration: none;
+}
+
+.project-item-link:hover,
+.project-item-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -504,4 +532,59 @@ body {
   font-style: normal;
 
   color: var(--additional-font-color);
+}
+
+.footer-wrap {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-text {
+  margin-bottom: 20px;
+
+  font-weight: bold;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
+
+.footer-socials {
+  width: 206px;
+  height: 80px;
+  margin-left: 70px;
+}
+
+.footer-socials-list {
+  display: flex;
+  justify-content: center;
+}
+.footer-socials-item {
+  width: 44px;
+  height: 44px;
+}
+
+.footer-socials-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.footer-socials-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-socials-link:hover,
+.footer-socials-link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-socials-icon {
+  fill: currentColor;
 }
